# optimg

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml  publish.yml
src/optimg/: __init__.py  __main__.py  dir.py  main.py  optimise.py
